--- a/admin.html
+++ b/admin.html
@@ -1,3 +1,12 @@
+<script>
+  const allowed = "ahmad123"; // غيّرها لكلمة سر خاصة بك
+  const input = prompt("أدخل كلمة المرور:");
+  if (input !== allowed) {
+    document.body.innerHTML = "<h2 style='text-align:center'>🚫 وصول غير مصرح به</h2>";
+    throw new Error("Unauthorized");
+  }
+</script>
+
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
