--- a/admin.html
+++ b/admin.html
@@ -6,8 +6,7 @@
   <title>لوحة الإدارة</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
-<body>
+<<body>
 <script>
   const allowedPassword = "ahmad123"; // ← غيّرها لكلمة مرورك الخاصة
   const userInput = prompt("🔐 أدخل كلمة المرور للدخول إلى لوحة الإدارة:");
@@ -20,7 +19,7 @@
     throw new Error("Unauthorized access");
   }
 </script>
-
+<
   }
 </script>
 <header class="hdr">
