--- a/index.html
+++ b/index.html
@@ -1,40 +1,29 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>أورورا مانجا</title>
-  <link rel="stylesheet" href="styles.css" />
-  <meta name="theme-color" content="#0b0e12">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>mangaQ - الصفحة الرئيسية</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<header class="hdr">
-  <a class="brand" href="index.html">
-    <img src="assets/logo.svg" alt="شعار" class="logo">
-    <span id="siteName">أورورا مانجا</span>
-  </a>
-  <nav class="nav">
-    <input id="search" type="search" placeholder="ابحث عن سلسلة أو وسم..." aria-label="بحث">
-    <a class="btn ghost" href="admin.html">لوحة الإدارة</a>
-    <button id="theme" class="btn">🌓</button>
-  </nav>
-</header>
+  <header>
+    <h1>mangaQ</h1>
+    <nav>
+      <a href="index.html">الرئيسية</a>
+      <a href="admin.html">لوحة الإدارة</a>
+    </nav>
+  </header>
 
-<main class="wrap">
-  <section>
-    <h2>السلاسل</h2>
-    <div id="tags" class="tags"></div>
-    <div id="grid" class="grid"></div>
-  </section>
-</main>
+  <main>
+    <h2>أحدث الفصول</h2>
+    <div id="latest-chapters"></div>
+  </main>
 
-<footer class="ftr">
-  <small>© <span id="year"></span> <span id="siteNameFoot">أورورا مانجا</span></small>
-</footer>
+  <footer>
+    <p>جميع الحقوق محفوظة © mangaQ</p>
+  </footer>
 
-<script src="app.js"></script>
-<script>
-  window.APP.initHome();
-</script>
+  <script src="script.js"></script>
 </body>
 </html>
